cleanup previous commit a bit. She pretty, function nicely. Still bugs if you try to refresh the page. and lots of functionality missing but well get to that